$Id$
            
2007-06-19: misc.lisp, multilet.lisp: Moved 'datafun-match' from
            misc.lisp to multilet.lisp 

2007-06-16: datafun.lisp, misc.lisp: Added (datafun-match exp
            pattern -body-), which (a), at macro expansion time, makes
            sure, if the pattern begins with a symbol, that it begins
            with the right symbol and (b), at run time, signals a
            standard "Ill formed" error if the pattern doesn't match.

            setter.lisp: If (!=/ sym ...) finds that sym is unbound,
            it asks the user if the intention is really to set the
            symbol before proceeding.

            [- Version 2.1.33 -]
2007-06-10: object.lisp: Allow :clos and :clos-object as synonyms for
            :object. 

            [- Version 2.1.32 2007/05/30 20:34:56 airfoyle Exp -]
2007-05-30: object.lisp: Replaced occurrence of 'multi-let' with
            'multiple-value-let', because 'multi-let' is not defined
            until a later file.
            debug.lisp: Replaced constant absent-dbg-entry* with a
            _pattern_ that defines a Dbg-entry as absent.  So far this
            makes little difference.

            [- Version 2.1.30 -]
2007-05-29: files.lisp: Stopped system from asking infuriating
            question about nonexistent files (in
            Code-file-chunk/derive-date).            

2007-05-27: object.lisp: Allowed 'def-op' to have :method-combination
            and :argument-precedence-order options, just as
            'defgeneric' does.

2007-05-20: object.lisp: Added kludgy convention for producing "blank"
            objects, i.e., objects that the standard 'initialize'
            method is never applied to.  This is for internal use
            only. 

            [- Version 2.1.29 2007/01/29 14:17:23 airfoyle Exp -]
2007-01-28: Added sanity check that 'forall' and 'exists' actually
            have vars.
            
            [- Version 2.1.28 2006/12/01 17:46:16 airfoyle Exp -]